--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jportal",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.2.251210",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,6 +20,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.1",
     "@vercel/analytics": "^1.4.1",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -29,12 +30,14 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
     "react-transition-group": "^4.4.5",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "vite": "^7.2.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -52,7 +55,6 @@
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10",
-    "vite-plugin-pwa": "^0.20.5"
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
