Add comprehensive documentation setup
- Create Astro + Starlight documentation site in docs/
- Add 10 documentation pages covering setup, architecture, features, PWA/offline, API integration, UI components, contributing, and troubleshooting
- Configure GitHub Actions workflow for automatic deployment to GitHub Pages
- Add CONTRIBUTING.md with development guidelines
- Update README.md with project overview and docs links
- Update .gitignore for docs build artifacts
- Add npm scripts for local docs development

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,36 @@ dist
 .netlify
 .cph
 .vercel
+
+# Docs build artifacts
+docs/dist
+docs/.astro
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Temporary files
+*.tmp
+*.temp
