--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jportal",
   "private": true,
-  "version": "0.2.260000",
+  "version": "0.v2.260130",
   "type": "module",
   "scripts": {
     "dev": "vite",
